--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
     .modal .actions{display:flex; gap:10px; justify-content:flex-end; margin-top:12px;}
     .small{font-size:12px; color:#666;}
 
+    /* 元の時間表示（時間変更時だけ出す） */
+    #originalTime{
+      display:none;
+      margin-top:6px;
+      color:#777;
+    }
+
     /* 自分の予約一覧 */
     .myWrap{ margin-top:14px; }
     .myTitle{ font-size:18px; font-weight:800; margin:12px 0 8px; }
@@ -94,18 +101,18 @@
       padding:10px 14px; font-size:14px;
     }
     .btnNormal{
-  border:0;
-  background:#e8f0fe;
-  color:#174ea6;
-  border-radius:999px;
-  padding:10px 14px;
-  font-size:14px;
-}
-/* 時間変更中：元の予約を薄く表示 */
-.fc .original-dim{
-  opacity: 0.25;
-}
+      border:0;
+      background:#e8f0fe;
+      color:#174ea6;
+      border-radius:999px;
+      padding:10px 14px;
+      font-size:14px;
+    }
 
+    /* 時間変更中：元の予約を薄く表示 */
+    .fc .original-dim{
+      opacity: 0.25;
+    }
   </style>
 
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
@@ -142,11 +149,16 @@
     <div id="myList">読み込み中…</div>
   </div>
 
-  <!-- 予約作成モーダル -->
+  <!-- 予約モーダル（作成/時間変更 共通） -->
   <div id="overlay" class="overlay">
     <div class="modal">
-      <h3>予約作成</h3>
+      <!-- ✅ タイトルを動的に変える -->
+      <h3 id="modalTitle">予約作成</h3>
+
       <div id="modalDate" class="small"></div>
+
+      <!-- ✅ 時間変更のときだけ「元の時間」を薄く表示 -->
+      <div id="originalTime" class="small"></div>
 
       <div class="row">
         <div>
@@ -199,72 +211,6 @@
   </div>
 
 <script>
-  // ===== 時間変更（自分の予約）=====
-
-// 編集中の予約ID
-let editingResvId = null;
-
-// カレンダー上で「元の予約」を薄くする
-function setOriginalDimOnCalendar(resvId, on){
-  if(!calendar) return;
-  const ev = calendar.getEventById(resvId);
-  if(!ev) return;
-
-  // classNamesは配列扱いになるので、簡単に「再読み込みで戻す」方式にします
-  // → on=true の時はクラス付与して見た目を薄くする
-  if(on){
-    ev.setProp("classNames", ["mine-event", "original-dim"]);
-  }else{
-    ev.setProp("classNames", ["mine-event"]);
-  }
-}
-
-// 編集モーダルを開く（元の予約を薄くする）
-async function openEditReservationFromList(r){
-  // r: rowsの1件（id, car_id, ymd, startHHMM, endHHMM, note）
-
-  // その車のカレンダーに切り替える（元の予約が見えるように）
-  $("car").value = String(r.car_id);
-  updateDimUi();
-  await loadEvents();
-
-  // 元の予約を薄く
-  editingResvId = r.id;
-  setOriginalDimOnCalendar(editingResvId, true);
-
-  // 編集UIは「予約作成モーダル」を流用（開始/終了/メモ）
-  modalYmd = r.ymd;
-
-  // セレクトを作り直して、値をセット
-  $("startSel").innerHTML = TIMES.map(t=>`<option value="${t}">${t}</option>`).join("");
-  $("endSel").innerHTML = [...TIMES,"24:00"].map(t=>`<option value="${t}">${t}</option>`).join("");
-
-  $("startSel").value = r.startHHMM;
-  $("endSel").value = r.endHHMM;
-  $("note").value = r.note || "";
-
-  // タイトル/日付表示を「時間変更」にする
-  $("modalDate").textContent = `${r.ymd}（時間変更）`;
-
-  // 保存ボタンの表示を変更
-  $("saveModalBtn").textContent = "変更を保存";
-
-  $("overlay").style.display = "flex";
-}
-
-// 編集モーダルを閉じる（元の薄表示を戻す）
-async function closeEditReservationUI(){
-  $("overlay").style.display = "none";
-  $("saveModalBtn").textContent = "予約する";
-
-  if(editingResvId){
-    // きれいに戻すため、イベントを再読込（確実）
-    const id = editingResvId;
-    editingResvId = null;
-    await loadEvents();
-  }
-}
-
   // ✅ あなたの値
   const LIFF_ID = "2008829976-rJa7ANlR";
   const SUPABASE_URL = "https://jmobmcphzqxbybkqpwfd.supabase.co";
@@ -377,6 +323,78 @@ async function closeEditReservationUI(){
     if(saveBtn) saveBtn.disabled = !isActive;
   }
 
+  // ===== モーダル見た目切替（作成/変更）=====
+  function setModalModeCreate(){
+    $("modalTitle").textContent = "予約作成";
+    $("saveModalBtn").textContent = "予約する";
+    $("originalTime").style.display = "none";
+    $("originalTime").textContent = "";
+  }
+  function setModalModeEdit(originalStart, originalEnd){
+    $("modalTitle").textContent = "時間変更";
+    $("saveModalBtn").textContent = "変更を保存";
+    $("originalTime").textContent = `元の時間：${originalStart}〜${originalEnd}`;
+    $("originalTime").style.display = "block";
+  }
+
+  // ===== 時間変更（自分の予約）=====
+  let editingResvId = null;
+
+  function setOriginalDimOnCalendar(resvId, on){
+    if(!calendar) return;
+    const ev = calendar.getEventById(resvId);
+    if(!ev) return;
+
+    if(on){
+      ev.setProp("classNames", ["mine-event", "original-dim"]);
+    }else{
+      ev.setProp("classNames", ["mine-event"]);
+    }
+  }
+
+  async function openEditReservationFromList(r){
+    // r: {id, car_id, ymd, startHHMM, endHHMM, note}
+
+    // その車のカレンダーに切り替え
+    $("car").value = String(r.car_id);
+    updateDimUi();
+    await loadEvents();
+
+    // 元の予約を薄く
+    editingResvId = r.id;
+    setOriginalDimOnCalendar(editingResvId, true);
+
+    modalYmd = r.ymd;
+
+    // ✅ 編集モード表示
+    setModalModeEdit(r.startHHMM, r.endHHMM);
+
+    // セレクトを作り直して、値をセット（＝最初から現在の予約時間が入る）
+    $("startSel").innerHTML = TIMES.map(t=>`<option value="${t}">${t}</option>`).join("");
+    $("endSel").innerHTML = [...TIMES,"24:00"].map(t=>`<option value="${t}">${t}</option>`).join("");
+
+    $("startSel").value = r.startHHMM;
+    $("endSel").value = r.endHHMM;
+    $("note").value = r.note || "";
+
+    $("modalDate").textContent = `${r.ymd}`;
+
+    $("overlay").style.display = "flex";
+  }
+
+  async function closeEditReservationUI(){
+    $("overlay").style.display = "none";
+
+    // ✅ 次に開くとき用に「予約作成」に戻す
+    setModalModeCreate();
+
+    if(editingResvId){
+      const id = editingResvId;
+      editingResvId = null;
+      await loadEvents(); // 再読み込みで確実に元に戻す
+    }
+  }
+
   // ===== LIFF =====
   async function initLiff(){
     await liff.init({ liffId: LIFF_ID });
@@ -462,9 +480,12 @@ async function closeEditReservationUI(){
     $("nameOverlay").style.display = "flex";
   }
 
-  // ===== 予約モーダル =====
+  // ===== 予約モーダル（新規）=====
   function openReservationModalByPicked(ymd, startHHMM){
     modalYmd = ymd;
+
+    // ✅ 新規作成モード
+    setModalModeCreate();
 
     $("startSel").innerHTML = TIMES.map(t=>`<option value="${t}">${t}</option>`).join("");
     $("endSel").innerHTML = [...TIMES,"24:00"].map(t=>`<option value="${t}">${t}</option>`).join("");
@@ -484,6 +505,9 @@ async function closeEditReservationUI(){
 
   function openReservationModalAllDay(dateObj){
     modalYmd = toYmd(dateObj);
+
+    // ✅ 新規作成モード
+    setModalModeCreate();
 
     $("startSel").innerHTML = TIMES.map(t=>`<option value="${t}">${t}</option>`).join("");
     $("endSel").innerHTML = [...TIMES,"24:00"].map(t=>`<option value="${t}">${t}</option>`).join("");
@@ -563,28 +587,6 @@ async function closeEditReservationUI(){
     await showDialog("キャンセルしました", "予約を取り消しました。");
     return true;
   }
-document.querySelectorAll("[data-edit]").forEach(btn=>{
-  btn.addEventListener("click", async ()=>{
-    const id = btn.getAttribute("data-edit");
-    const r = rows.find(x=>String(x.id)===String(id));
-    if(!r) return;
-
-    // いったん削除
-    const carName = carsMap?.[Number(r.car_id)]?.name ?? "";
-    const ok = await cancelReservation(
-      r.id,
-      carName,
-      r.ymd,
-      r.startHHMM,
-      r.endHHMM
-    );
-    if(!ok) return;
-
-    // 同じ日付・開始時刻で予約モーダルを開く
-    modalYmd = r.ymd;
-    openReservationModalByPicked(r.ymd, r.startHHMM);
-  });
-});
 
   // ===== カレンダーイベント読み込み =====
   async function loadEvents(){
@@ -668,7 +670,6 @@ document.querySelectorAll("[data-edit]").forEach(btn=>{
       datesSet: loadEvents,
 
       dateClick:(info)=>{
-        // 点検中なら予約モーダルを開かない（閲覧のみ）
         const opt = $("car").selectedOptions[0];
         const isActive = (opt?.dataset.active === "1");
         if(!isActive){
@@ -770,33 +771,33 @@ document.querySelectorAll("[data-edit]").forEach(btn=>{
         const main = `${carName}　${r.startHHMM}〜${r.endHHMM}`;
         const sub = r.note ? `メモ：${r.note}` : "";
 
-html += `
-  <div class="myCard">
-    <div class="myLeft">
-      <div class="myMain">${main}</div>
-      ${sub ? `<div class="mySub">${sub}</div>` : `<div class="mySub"></div>`}
-    </div>
-    <div class="myActions">
-      <button class="btnNormal" data-edit="${r.id}">時間変更</button>
-      <button class="btnDanger" data-cancel="${r.id}">キャンセル</button>
-    </div>
-  </div>
-`;
-
+        html += `
+          <div class="myCard">
+            <div class="myLeft">
+              <div class="myMain">${main}</div>
+              ${sub ? `<div class="mySub">${sub}</div>` : `<div class="mySub"></div>`}
+            </div>
+            <div class="myActions">
+              <button class="btnNormal" data-edit="${r.id}">時間変更</button>
+              <button class="btnDanger" data-cancel="${r.id}">キャンセル</button>
+            </div>
+          </div>
+        `;
       });
     });
 
     $("myList").innerHTML = html;
 
-  document.querySelectorAll("[data-edit]").forEach(btn=>{
-  btn.addEventListener("click", async ()=>{
-    const id = btn.getAttribute("data-edit");
-    const r = rows.find(x=>String(x.id)===String(id));
-    if(!r) return;
-    await openEditReservationFromList(r);
-  });
-});
-  document.querySelectorAll("[data-cancel]").forEach(btn=>{
+    document.querySelectorAll("[data-edit]").forEach(btn=>{
+      btn.addEventListener("click", async ()=>{
+        const id = btn.getAttribute("data-edit");
+        const r = rows.find(x=>String(x.id)===String(id));
+        if(!r) return;
+        await openEditReservationFromList(r);
+      });
+    });
+
+    document.querySelectorAll("[data-cancel]").forEach(btn=>{
       btn.addEventListener("click", async ()=>{
         const id = btn.getAttribute("data-cancel");
         const r = rows.find(x=>String(x.id)===String(id));
@@ -825,101 +826,96 @@ html += `
     await loadEvents();
   });
 
-$("cancelModalBtn").addEventListener("click", closeEditReservationUI);
+  $("cancelModalBtn").addEventListener("click", closeEditReservationUI);
 
-
-$("saveModalBtn").addEventListener("click", async ()=>{
-  try{
-    if(!userProfile.fullName){
-      await showDialog("名前未登録", "先に「苗字・名前」の登録をしてください。");
-      $("nameOverlay").style.display = "flex";
-      return;
-    }
-
-    const carIdStr = $("car").value;
-    if(!carIdStr){
-      await showDialog("車を選択", "車が選択されていません。");
-      return;
-    }
-
-    // 点検中なら不可
-    const opt = $("car").selectedOptions[0];
-    const isActive = (opt?.dataset.active === "1");
-    if(!isActive){
-      await showDialog("予約できません", "この車は現在「点検中」で使用停止になっています。");
-      return;
-    }
-
-    const carId = Number(carIdStr);
-    const startStr = $("startSel").value;
-    const endStr = $("endSel").value;
-
-    const startISO = toISOFromYmdTime(modalYmd, startStr);
-    const endISO = toISOFromYmdTime(modalYmd, endStr);
-
-    if(new Date(startISO) >= new Date(endISO)){
-      await showDialog("入力エラー", "終了は開始より後にしてください。");
-      return;
-    }
-
-    // ✅ 編集モード（時間変更）
-    if(editingResvId){
-      // 重複チェック（自分のこの予約IDは除外）
-      const overlap = await (async ()=>{
-        let q = sb
-          .from("reservations")
-          .select("id")
-          .eq("car_id", carId)
-          .lt("start_time", endISO)
-          .gt("end_time", startISO)
-          .limit(1)
-          .neq("id", editingResvId);
-
-        const { data, error } = await q;
-        if(error) throw error;
-        return (data || []).length > 0;
-      })();
-
-      if(overlap){
-        await showDialog("変更できません", "その時間帯はすでに予約があります。\n別の時間か別の車両にしてください。");
+  $("saveModalBtn").addEventListener("click", async ()=>{
+    try{
+      if(!userProfile.fullName){
+        await showDialog("名前未登録", "先に「苗字・名前」の登録をしてください。");
+        $("nameOverlay").style.display = "flex";
         return;
       }
 
-      // UPDATE（自分の予約のみ）
-      const { error } = await sb
-        .from("reservations")
-        .update({
-          car_id: carId,
-          start_time: startISO,
-          end_time: endISO,
-          note: ($("note").value || "").trim()
-        })
-        .eq("id", editingResvId)
-        .eq("user_id", me.userId);
+      const carIdStr = $("car").value;
+      if(!carIdStr){
+        await showDialog("車を選択", "車が選択されていません。");
+        return;
+      }
 
-      if(error) throw error;
+      const opt = $("car").selectedOptions[0];
+      const isActive = (opt?.dataset.active === "1");
+      if(!isActive){
+        await showDialog("予約できません", "この車は現在「点検中」で使用停止になっています。");
+        return;
+      }
 
-      await showDialog("変更しました", "予約時間を変更しました。");
+      const carId = Number(carIdStr);
+      const startStr = $("startSel").value;
+      const endStr = $("endSel").value;
 
-      // UIを閉じてリロード
-      await closeEditReservationUI();
-      await loadMyReservationsAll();
-      return;
+      const startISO = toISOFromYmdTime(modalYmd, startStr);
+      const endISO = toISOFromYmdTime(modalYmd, endStr);
+
+      if(new Date(startISO) >= new Date(endISO)){
+        await showDialog("入力エラー", "終了は開始より後にしてください。");
+        return;
+      }
+
+      // ✅ 編集モード（時間変更）
+      if(editingResvId){
+        // 重複チェック（自分のこの予約IDは除外）
+        const overlap = await (async ()=>{
+          const { data, error } = await sb
+            .from("reservations")
+            .select("id")
+            .eq("car_id", carId)
+            .lt("start_time", endISO)
+            .gt("end_time", startISO)
+            .neq("id", editingResvId)
+            .limit(1);
+
+          if(error) throw error;
+          return (data || []).length > 0;
+        })();
+
+        if(overlap){
+          await showDialog("変更できません", "その時間帯はすでに予約があります。\n別の時間か別の車両にしてください。");
+          return;
+        }
+
+        const { error } = await sb
+          .from("reservations")
+          .update({
+            car_id: carId,
+            start_time: startISO,
+            end_time: endISO,
+            note: ($("note").value || "").trim()
+          })
+          .eq("id", editingResvId)
+          .eq("user_id", me.userId);
+
+        if(error) throw error;
+
+        await showDialog("変更しました", "予約時間を変更しました。");
+
+        await closeEditReservationUI();
+        await loadMyReservationsAll();
+        return;
+      }
+
+      // ✅ 通常モード（新規予約）
+      const ok = await createReservation(carId, startISO, endISO, $("note").value);
+      if(ok){
+        $("overlay").style.display="none";
+        setModalModeCreate();
+        await loadEvents();
+        await loadMyReservationsAll();
+      }
+    }catch(e){
+      console.error(e);
+      await showDialog("処理に失敗", "処理に失敗しました（設定値やDBを確認）");
     }
-
-    // ✅ 通常モード（新規予約）
-    const ok = await createReservation(carId, startISO, endISO, $("note").value);
-    if(ok){
-      $("overlay").style.display="none";
-      await loadEvents();
-      await loadMyReservationsAll();
-    }
-  }catch(e){
-    console.error(e);
-    await showDialog("処理に失敗", "処理に失敗しました（設定値やDBを確認）");
-  }
-});
-
+  });
 
   $("saveNameBtn").addEventListener("click", async ()=>{
     const last = $("lastName").value.trim();
